# regulens

./: .env.example  .gitignore  CORPUS.md  README.md  SCRAPER.md  pyproject.toml
ingestion/: __init__.py  parsing.py  scraper.py  storage.py
scripts/: ingest_sample.py  parse_one.py  spike_fetch_api.py  spike_fetch_bcb.py
tests/: __init__.py  test_scraper.py
