[project]
name = "regulens"
version = "0.1.0"
description = "RAG system over Brazilian financial regulation (BCB)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "boto3>=1.34.0",
    "tenacity>=8.3.0",
    "docling>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "retrieval", "serving", "evals"]
